--- a/static_data/public/UI.css
+++ b/static_data/public/UI.css
@@ -20,6 +20,7 @@ ul {
 }
 
 li {
+	font-size: 200%;
 	float: left;
 	width: 25%;
 }
@@ -28,7 +29,7 @@ li a {
 	display: block;
 	color: white;
 	text-align: center;
-	padding: 14px 16px;
+	padding: 10%;
 	text-decoration: none;
 
 }
